canarydeployment/job-match-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: job-match-api
  name: job-match-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: job-match-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/jobmatch-api-default: "true"
        io.kompose.service: job-match-api
    spec:
      containers:
        - env:
            - name: DB_PORT
              value: "5432"
            - name: JWT_SEED
              value: mysecretkey
            - name: PORT
              value: "3000"
            - name: POSTGRES_DB
              value: job_match_db
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: postgres
          image: job-match-api
          name: job-match-api
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
