canarydeployment/job-match-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: job-match-web
  name: job-match-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: job-match-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/jobmatch-api-default: "true"
        io.kompose.service: job-match-web
    spec:
      containers:
        - args:
            - npm
            - run
            - dev
          image: job-match-web
          name: job-match-web
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
