canarydeployment/job-match-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobmatchapp
spec:
  selector:
    app: jobmatchapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
